<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_input"
        android:textSize="16sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/hint_text"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_output"
        android:textSize="16sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:text="@string/default_label_text"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/text_view_background" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_text"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
